Data cleaning & Data preparation

--- a/ML_Cw.ipynb
+++ b/ML_Cw.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOaPepOCqlon3YqzoMGGwYO"
+      "authorship_tag": "ABX9TyPcSGJQ4hJdXUvj2uAe8Qut"
     },
     "kernelspec": {
       "name": "python3",
@@ -520,6 +520,197 @@
             " 20  Churn             7043 non-null   object \n",
             "dtypes: float64(1), int64(2), object(18)\n",
             "memory usage: 1.1+ MB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# CLEANING & DATA PREPARATION\n",
+        "\n",
+        "# Convert TotalCharges to numeric\n",
+        "df[\"TotalCharges\"] = pd.to_numeric(df[\"TotalCharges\"].replace(\" \", np.nan))\n",
+        "\n",
+        "# Check missing values after conversion\n",
+        "df.isna().sum()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 742
+        },
+        "id": "jtvCacPC9Es7",
+        "outputId": "66a9aa0c-d91c-4d42-acdb-a59d3cd9ddf9"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "customerID           0\n",
+              "gender               0\n",
+              "SeniorCitizen        0\n",
+              "Partner              0\n",
+              "Dependents           0\n",
+              "tenure               0\n",
+              "PhoneService         0\n",
+              "MultipleLines        0\n",
+              "InternetService      0\n",
+              "OnlineSecurity       0\n",
+              "OnlineBackup         0\n",
+              "DeviceProtection     0\n",
+              "TechSupport          0\n",
+              "StreamingTV          0\n",
+              "StreamingMovies      0\n",
+              "Contract             0\n",
+              "PaperlessBilling     0\n",
+              "PaymentMethod        0\n",
+              "MonthlyCharges       0\n",
+              "TotalCharges        11\n",
+              "Churn                0\n",
+              "dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>customerID</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>gender</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>SeniorCitizen</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Partner</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Dependents</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>tenure</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>PhoneService</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>MultipleLines</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>InternetService</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>OnlineSecurity</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>OnlineBackup</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>DeviceProtection</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>TechSupport</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>StreamingTV</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>StreamingMovies</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Contract</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>PaperlessBilling</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>PaymentMethod</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>MonthlyCharges</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>TotalCharges</th>\n",
+              "      <td>11</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Churn</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Remove missing values created from invalid TotalCharges\n",
+        "df = df.dropna()\n",
+        "\n",
+        "print(\"New shape after cleaning:\", df.shape)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5ltq1uJ79K5M",
+        "outputId": "1d257678-aefd-49b7-b483-1c571ecfb5f7"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "New shape after cleaning: (7032, 21)\n"
           ]
         }
       ]
