Created Notebook 2 for decision tree + ANN and import libraries

--- a/ML_Cw.ipynb
+++ b/ML_Cw.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYT7WULGtL6ZWi5pWBcnpR"
+      "authorship_tag": "ABX9TyOfvMB1nfXL5qYE7imh7/OA"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +16,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# NOTEBOOK 1"
+      ],
+      "metadata": {
+        "id": "Kh2J5_45f19Z"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
@@ -26,7 +35,7 @@
       "metadata": {
         "id": "P_THZlYDcIE_"
       },
-      "execution_count": 26,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -40,14 +49,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 342
         },
         "id": "yUamuJEL4LO8",
-        "outputId": "d4801e29-bc46-4ab9-a5e8-b119a8ed1b8d"
+        "outputId": "18b17f5b-88ad-457c-b1c9-9eb749fa1bbb"
       },
       "outputs": [
         {
@@ -86,7 +95,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-04543aed-bbf6-4c71-87f8-c2a6f61b271a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9c1230b3-825f-4af9-a419-49bcbafeb055\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -256,7 +265,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-04543aed-bbf6-4c71-87f8-c2a6f61b271a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9c1230b3-825f-4af9-a419-49bcbafeb055')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -308,12 +317,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-04543aed-bbf6-4c71-87f8-c2a6f61b271a button.colab-df-convert');\n",
+              "        document.querySelector('#df-9c1230b3-825f-4af9-a419-49bcbafeb055 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-04543aed-bbf6-4c71-87f8-c2a6f61b271a');\n",
+              "        const element = document.querySelector('#df-9c1230b3-825f-4af9-a419-49bcbafeb055');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -333,8 +342,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-da26e5da-ae60-4d22-b951-1b7e051452ce\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-da26e5da-ae60-4d22-b951-1b7e051452ce')\"\n",
+              "    <div id=\"df-726877dd-5197-4e92-ae3f-6ab94bbd619d\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-726877dd-5197-4e92-ae3f-6ab94bbd619d')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -453,7 +462,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-da26e5da-ae60-4d22-b951-1b7e051452ce button');\n",
+              "            document.querySelector('#df-726877dd-5197-4e92-ae3f-6ab94bbd619d button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -469,7 +478,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 2
         }
       ],
       "source": [
@@ -502,9 +511,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xDwSRAoq8ka8",
-        "outputId": "7095a644-5d55-4529-89fc-e2847fc30840"
+        "outputId": "53aefe77-e744-4634-f5d6-354eaa7505ad"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,9 +576,9 @@
           "height": 742
         },
         "id": "jtvCacPC9Es7",
-        "outputId": "71109ec4-e145-4023-d503-40cebe4e57ff"
+        "outputId": "38416ae6-2f6b-49aa-e05c-f00568e3a2ad"
       },
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -711,7 +720,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 5
         }
       ]
     },
@@ -725,12 +734,12 @@
       ],
       "metadata": {
         "id": "5ltq1uJ79K5M",
-        "outputId": "157f18bb-fca7-4108-ed04-4f6dbb02f86c",
+        "outputId": "f01f2e53-d27c-4de1-fe11-fd609b28d9ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -761,9 +770,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JkT8p1EFYhCU",
-        "outputId": "a01cd85f-f40c-4bad-ea23-5487a907bed3"
+        "outputId": "d90187be-0852-4fcc-fcef-181b45ff01a9"
       },
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -792,12 +801,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 300
+          "height": 320
         },
         "id": "wA6vfur9YiQs",
-        "outputId": "20b42d21-34aa-48a1-867e-b52046b0101f"
+        "outputId": "4f77d778-1c8f-40e3-b057-77e3649ecbc9"
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -815,7 +824,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5f5f5957-9bdb-4125-8cbc-796763ccfe72\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-02b56322-02be-45bb-b410-0ad099577a7a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -903,7 +912,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5f5f5957-9bdb-4125-8cbc-796763ccfe72')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-02b56322-02be-45bb-b410-0ad099577a7a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -955,12 +964,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5f5f5957-9bdb-4125-8cbc-796763ccfe72 button.colab-df-convert');\n",
+              "        document.querySelector('#df-02b56322-02be-45bb-b410-0ad099577a7a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5f5f5957-9bdb-4125-8cbc-796763ccfe72');\n",
+              "        const element = document.querySelector('#df-02b56322-02be-45bb-b410-0ad099577a7a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -980,8 +989,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-82846111-6a19-431f-baad-bf51e4ff747c\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-82846111-6a19-431f-baad-bf51e4ff747c')\"\n",
+              "    <div id=\"df-038a3ee7-f945-4e40-b2b9-c0cc64a0983e\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-038a3ee7-f945-4e40-b2b9-c0cc64a0983e')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1100,7 +1109,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-82846111-6a19-431f-baad-bf51e4ff747c button');\n",
+              "            document.querySelector('#df-038a3ee7-f945-4e40-b2b9-c0cc64a0983e button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1116,7 +1125,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 8
         }
       ]
     },
@@ -1143,12 +1152,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 534
+          "height": 332
         },
         "id": "Uc3TXslMZSlL",
-        "outputId": "01338e07-f471-4ed5-c288-6891df29f5e7"
+        "outputId": "868a11a3-d9ac-4a56-e9ff-0ff186332c6d"
       },
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1192,12 +1201,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 464
+          "height": 263
         },
         "id": "mZP6Nx9PZmKz",
-        "outputId": "64261b86-569d-40d0-dc01-7e43f95b5bf2"
+        "outputId": "a74b8860-3a14-4144-8f48-fd70558e9c57"
       },
-      "execution_count": 15,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1223,12 +1232,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 507
+          "height": 287
         },
         "id": "3_tlZSETaAVh",
-        "outputId": "4f15af81-3217-4071-83b6-a0eaa78e49c2"
+        "outputId": "24128fab-e1e2-4a2e-95d8-238b68c31433"
       },
-      "execution_count": 17,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1253,12 +1262,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 464
+          "height": 263
         },
         "id": "KFlu-KitaCjL",
-        "outputId": "364ea6ab-8c7b-4d8b-e262-0d378555641b"
+        "outputId": "46af03bf-ce88-4de9-9896-4415f3f725d6"
       },
-      "execution_count": 18,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1293,12 +1302,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 400
+          "height": 228
         },
         "id": "S8-VMKNgabD4",
-        "outputId": "a81bc423-655c-4f6f-ffd7-744e174c4699"
+        "outputId": "9232fd9a-eb58-4694-ef57-41669e0ecd21"
       },
-      "execution_count": 21,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1324,12 +1333,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 406
+          "height": 231
         },
         "id": "gdqxPV0xbRDF",
-        "outputId": "befe0503-5849-4b27-c11f-9475fd2e7d76"
+        "outputId": "9fbb36ef-ce6d-4c6d-cab6-25b5f1e74322"
       },
-      "execution_count": 22,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1366,12 +1375,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 475
+          "height": 269
         },
         "id": "TPK4W4IJbwmC",
-        "outputId": "08508f12-2203-434f-d110-ae38aa7dd3b2"
+        "outputId": "0d020205-171e-45c0-8c60-d3c15e763d38"
       },
-      "execution_count": 25,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1389,9 +1398,49 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "HPKvvX_bb0EL"
+        "id": "MrhoeLSjxo9c"
       },
-      "execution_count": null,
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# NOTEBOOK 2 — DECISION TREE + ANN"
+      ],
+      "metadata": {
+        "id": "awH59yQnxqkZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ============================================================\n",
+        "# NOTEBOOK 2: Decision Tree + Keras ANN\n",
+        "# ============================================================\n",
+        "\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score, roc_auc_score\n",
+        "\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n",
+        "# Keras Imports\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense, Dropout\n",
+        "from tensorflow.keras.callbacks import EarlyStopping\n"
+      ],
+      "metadata": {
+        "id": "wC8sSxzVxxay"
+      },
+      "execution_count": 16,
       "outputs": []
     }
   ]
