Created Train-Test Split

--- a/ML_Cw.ipynb
+++ b/ML_Cw.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMT6VfeD0htksNwIXJyOPQc"
+      "authorship_tag": "ABX9TyPlEnVuB6EkEq+KeIQ3fzC8"
     },
     "kernelspec": {
       "name": "python3",
@@ -1914,6 +1914,28 @@
         "id": "USfK4PNCymjB"
       },
       "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Train-Test Split"
+      ],
+      "metadata": {
+        "id": "mKKTah9Iy4UL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "RXxIovy6y7sB"
+      },
+      "execution_count": 20,
       "outputs": []
     }
   ]
