Create Preprocessing Pipelines to converts text columns into numeric form and scaling numeric values

--- a/ML_Cw.ipynb
+++ b/ML_Cw.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPlEnVuB6EkEq+KeIQ3fzC8"
+      "authorship_tag": "ABX9TyPAZqC0QMuF7GKqg4XeSqCb"
     },
     "kernelspec": {
       "name": "python3",
@@ -1936,6 +1936,37 @@
         "id": "RXxIovy6y7sB"
       },
       "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Preprocessing Pipelines"
+      ],
+      "metadata": {
+        "id": "mkAZfRy8zChb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "categorical_features = X.select_dtypes(include=[\"object\"]).columns.tolist()\n",
+        "numerical_features = [\"tenure\", \"MonthlyCharges\", \"TotalCharges\"]\n",
+        "\n",
+        "preprocess_tree = ColumnTransformer([\n",
+        "    (\"cat\", OneHotEncoder(handle_unknown='ignore'), categorical_features),\n",
+        "    (\"num\", \"passthrough\", numerical_features)\n",
+        "])\n",
+        "\n",
+        "preprocess_ann = ColumnTransformer([\n",
+        "    (\"cat\", OneHotEncoder(handle_unknown='ignore'), categorical_features),\n",
+        "    (\"num\", StandardScaler(), numerical_features)\n",
+        "])\n"
+      ],
+      "metadata": {
+        "id": "gAaQmxgTzFYr"
+      },
+      "execution_count": 22,
       "outputs": []
     }
   ]
